# ul-fri-nlp-course-project-2025-2026-kartoffelbrei

./: .gitignore  Dockerfile  README.md  confusion_matrix.csv  pipeline_log.txt  pyproject.toml  requirements.txt
report/: pipeline_log.txt  report.bib  report.tex
report/code/: .gitignore  README.md
results/: metrics.txt
src/: config.py  example.py  intent_router.py  main.py  models.py  pipeline.py  pipeline_1.py
src/analysis/: intent_data.py
src/backend/: api_requests.py  config_backend.py  fintraffic_endpoints.py  format_response.py  live_train_params.py  metadata_handler.py  route_params.py  time_converter.py  website_handler.py
src/fintraffic_api/: api_test.py
src/llm_engine/: answer_router.py  api_request_builder.py  config.py  config_llm.py  intent_extractor.py  intent_router.py  intents.py  llm_test.py  model_manager.py  model_pipeline.py  router_i.py  system_prompts.py
src/llm_prompts/: answer_prompt.py  answer_prompt.txt  intent_prompt.py  intent_prompt.txt
src/llm_queries/: queries.py  queries.txt
src/metadata/: station_dict.json  train_category_list.json  train_types_dict.json
src/util/: file_creation.py
