[project]
name = "kartoffelbrei"
version = "31.03.2026"
requires-python = ">= 3"
authors = [
    { name = "Nina Zink", email = "nina-sophie.zink@fau.de"},
    { name = "Paul Horn", email = "paul.horn@mailbox.tu-dresden.de"},
    { name = "Cornelius Niese", email = "cornelius.niese@student.kit.edu" }
]
readme = "README.md"
dependencies = [
    "numpy>=1.26.1",
    "requests>=2.33.1",
    "llama-cpp-python>=0.3.19",
    "nltk>=3.9.4",
    "scikit-learn>=1.8.0",
    "sentence_transformers>=5.3.0",
    "huggingface-hub>=1.8.0",
]

[project.optional-dependencies]
optional = [
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "github.url"