[project]
name = "kartoffelbrei"
version = "31.03.2026"
requires-python = ">=3.10"
authors = [
    { name = "Nina Zink", email = "nina-sophie.zink@fau.de"},
    { name = "Paul Horn", email = "paul.horn@mailbox.tu-dresden.de"},
    { name = "Cornelius Niese", email = "cornelius.niese@student.kit.edu" }
]
readme = "README.md"
dependencies = [
    "numpy>=1.26.1",
    "matplotlib>=3.10.0",
    "requests>=2.33.1",
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",
    "sentence_transformers>=5.3.0",
    "huggingface-hub>=1.8.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.46.1",
    "beautifulsoup4>=4.13.3",
    "jupyter>=1.0.0",
    "mpld3>=0.5.10",
    "pydot>=2.0.0",
    "gensim>=4.3.2",
    "tensorflow>=2.18.0",
    "keras>=3.5.0",
    "pandas>=2.2.2",
    "torch",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-huggingface",
    "faiss-cpu",
    "tiktoken",
    "dateparser",
]

[project.optional-dependencies]
optional = [
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "github.url"