[project]
name = "kartoffelbrei"
version = "31.03.2026"
requires-python = ">=3.10"
authors = [
    { name = "Nina Zink", email = "nina-sophie.zink@fau.de"},
    { name = "Paul Horn", email = "paul.horn@mailbox.tu-dresden.de"},
    { name = "Cornelius Niese", email = "cornelius.niese@student.kit.edu" }
]
readme = "README.md"
dependencies = [
    "numpy>=1.26.1",
    "matplotlib>=3.10.0",
    "requests>=2.33.1",
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",

    # HF CORE (must be consistent)
    "transformers==5.9.0",#5.5.4
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "huggingface-hub==1.16.1",#1.11.0

    # tokenizer deps
    "protobuf==7.34.1",

    "sentence-transformers==5.5.0",

    "beautifulsoup4==4.14.3",
    "jupyter>=1.0.0",
    "mpld3>=0.5.10",
    "pydot>=2.0.0",
    "gensim>=4.3.2",
    "pandas>=2.2.2",

    "langchain==1.3.0",
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-text-splitters==1.1.2",
    "langchain-huggingface==1.2.2",

    "faiss-cpu==1.13.2",
    "tiktoken==0.13.0",
    "dateparser==1.4.0",
]

[project.optional-dependencies]
optional = [
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/UL-FRI-NLP-Course/ul-fri-nlp-course-project-2025-2026-kartoffelbrei"